# TiledForge

./: CMakeLists.txt
include/TiledForge/: Config.hpp  FreeFuncs.hpp  ImageLayer.hpp  Layer.hpp  LayerGroup.hpp  Map.hpp  Object.hpp  ObjectGroup.hpp  ObjectTypes.hpp  Property.hpp  TileLayer.hpp  Tileset.hpp  Types.hpp
include/TiledForge/detail/: Android.hpp  Log.hpp
src/: FreeFuncs.cpp  ImageLayer.cpp  LayerGroup.cpp  Map.cpp  Object.cpp  ObjectGroup.cpp  ObjectTypes.cpp  Property.cpp  TileLayer.cpp  Tileset.cpp
test/: CMakeLists.txt  main.cpp
